// Vitest Snapshot v1

exports[`Parse JSX > Image 1`] = `
{
  "@type": "@builder.io/mitosis/component",
  "children": [
    {
      "@type": "@builder.io/mitosis/node",
      "bindings": {},
      "children": [
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
      ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "ref": {
              "code": "pictureRef",
            },
          },
          "children": [
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [],
              "meta": {},
              "name": "div",
              "properties": {
                "_text": "
        ",
              },
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {
                "when": {
                  "code": "!state.useLazyLoading() || state.load",
                },
              },
              "children": [
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
          ",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {
                    "alt": {
                      "code": "props.altText",
                    },
                    "aria-role": {
                      "code": "props.altText ? 'presentation' : undefined",
                    },
                    "class": {
                      "code": "'builder-image' + (props._class ? ' ' + props._class : '')",
                    },
                    "css": {
                      "code": "{
  opacity: '1',
  transition: 'opacity 0.2s ease-in-out',
  objectFit: 'cover',
  objectPosition: 'center'
}",
                    },
                    "onLoad": {
                      "code": "state.setLoaded()",
                    },
                    "sizes": {
                      "code": "props.sizes",
                    },
                    "src": {
                      "code": "props.image",
                    },
                    "srcset": {
                      "code": "props.srcset",
                    },
                  },
                  "children": [],
                  "meta": {},
                  "name": "img",
                  "properties": {},
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
        ",
                  },
                  "scope": {},
                },
              ],
              "meta": {},
              "name": "Show",
              "properties": {},
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [],
              "meta": {},
              "name": "div",
              "properties": {
                "_text": "
        ",
              },
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {
                "srcset": {
                  "code": "props.srcset",
                },
              },
              "children": [],
              "meta": {},
              "name": "source",
              "properties": {},
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [],
              "meta": {},
              "name": "div",
              "properties": {
                "_text": "
      ",
              },
              "scope": {},
            },
          ],
          "meta": {},
          "name": "picture",
          "properties": {},
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
      ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "_text": {
              "code": "props.children",
            },
          },
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {},
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
    ",
          },
          "scope": {},
        },
      ],
      "meta": {},
      "name": "Fragment",
      "properties": {},
      "scope": {},
    },
  ],
  "context": {
    "get": {},
    "set": {},
  },
  "exports": {},
  "hooks": {
    "onMount": {
      "code": "
  if (state.useLazyLoading()) {
    // throttled scroll capture listener
    const listener = () => {
      if (pictureRef) {
        const rect = pictureRef.getBoundingClientRect();
        const buffer = window.innerHeight / 2;

        if (rect.top < window.innerHeight + buffer) {
          setLoad(true);
          state.scrollListener = null;
          window.removeEventListener('scroll', listener);
        }
      }
    };

    state.scrollListener = listener;
    window.addEventListener('scroll', listener, {
      capture: true,
      passive: true
    });
    listener();
  }
",
    },
    "onUnMount": {
      "code": "
  if (state.scrollListener) {
    window.removeEventListener('scroll', state.scrollListener);
  }
",
    },
  },
  "imports": [],
  "inputs": [],
  "meta": {},
  "name": "Image",
  "propsTypeRef": "ImageProps",
  "refs": {
    "pictureRef": {
      "argument": "",
      "typeParameter": "HTMLElement",
    },
  },
  "state": {
    "imageLoaded": {
      "code": false,
      "type": "property",
    },
    "isBrowser": {
      "code": "@builder.io/mitosis/function:function isBrowser() {
  return typeof window !== 'undefined' && window.navigator.product != 'ReactNative';
}",
      "type": "function",
    },
    "load": {
      "code": false,
      "type": "property",
    },
    "scrollListener": {
      "code": null,
      "type": "property",
    },
    "setLoaded": {
      "code": "@builder.io/mitosis/method:setLoaded() {
  state.imageLoaded = true;
}",
      "type": "method",
    },
    "useLazyLoading": {
      "code": "@builder.io/mitosis/method:useLazyLoading() {
  // TODO: Add more checks here, like testing for real web browsers
  return !!props.lazy && isBrowser();
}",
      "type": "method",
    },
  },
  "subComponents": [],
  "types": [
    "// TODO: AMP Support?
export interface ImageProps {
  _class?: string;
  image: string;
  sizes?: string;
  lazy?: boolean;
  height?: number;
  width?: number;
  altText?: string;
  backgroundSize?: string;
  backgroundPosition?: string; // TODO: Support generating Builder.io and or Shopify \`srcset\`s when needed

  srcset?: string; // TODO: Implement support for custom aspect ratios

  aspectRatio?: number; // TODO: This might not work as expected in terms of positioning

  children?: any;
}",
  ],
}
`;

exports[`Parse JSX > custom mitosis package 1`] = `
{
  "@type": "@builder.io/mitosis/component",
  "children": [
    {
      "@type": "@builder.io/mitosis/node",
      "bindings": {},
      "children": [
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "Hello ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "_text": {
              "code": "state.name",
            },
          },
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {},
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "! I can run in React, Qwik, Vue, Solid, or Liquid!",
          },
          "scope": {},
        },
      ],
      "meta": {},
      "name": "div",
      "properties": {},
      "scope": {},
    },
  ],
  "context": {
    "get": {},
    "set": {},
  },
  "exports": {},
  "hooks": {},
  "imports": [],
  "inputs": [],
  "meta": {},
  "name": "MyBasicComponent",
  "refs": {},
  "state": {
    "name": {
      "code": "PatrickJS",
      "type": "property",
    },
  },
  "subComponents": [],
}
`;

exports[`Parse JSX > metadata 1`] = `
{
  "@type": "@builder.io/mitosis/component",
  "children": [
    {
      "@type": "@builder.io/mitosis/node",
      "bindings": {},
      "children": [
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
      ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "when": {
              "code": "props.link",
            },
          },
          "children": [
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [],
              "meta": {},
              "name": "div",
              "properties": {
                "_text": "
        ",
              },
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {
                "_spread": {
                  "code": "props.attributes",
                },
                "href": {
                  "code": "props.link",
                },
                "target": {
                  "code": "props.openLinkInNewTab ? '_blank' : undefined",
                },
              },
              "children": [
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
          ",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {
                    "_text": {
                      "code": "props.text",
                    },
                  },
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {},
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
        ",
                  },
                  "scope": {},
                },
              ],
              "meta": {},
              "name": "a",
              "properties": {},
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [],
              "meta": {},
              "name": "div",
              "properties": {
                "_text": "
      ",
              },
              "scope": {},
            },
          ],
          "meta": {},
          "name": "Show",
          "properties": {},
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
      ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "when": {
              "code": "!props.link",
            },
          },
          "children": [
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [],
              "meta": {},
              "name": "div",
              "properties": {
                "_text": "
        ",
              },
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {
                "_spread": {
                  "code": "props.attributes",
                },
              },
              "children": [
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
          ",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {
                    "_text": {
                      "code": "props.text",
                    },
                  },
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {},
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
        ",
                  },
                  "scope": {},
                },
              ],
              "meta": {},
              "name": "button",
              "properties": {
                "type": "button",
              },
              "scope": {},
            },
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [],
              "meta": {},
              "name": "div",
              "properties": {
                "_text": "
      ",
              },
              "scope": {},
            },
          ],
          "meta": {},
          "name": "Show",
          "properties": {},
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
    ",
          },
          "scope": {},
        },
      ],
      "meta": {},
      "name": "Fragment",
      "properties": {},
      "scope": {},
    },
  ],
  "context": {
    "get": {},
    "set": {},
  },
  "exports": {},
  "hooks": {},
  "imports": [],
  "inputs": [],
  "meta": {
    "useMetadata": {
      "foo": {
        "bar": "baz",
      },
    },
  },
  "name": "Button",
  "propsTypeRef": "ButtonProps",
  "refs": {},
  "state": {},
  "subComponents": [],
  "types": [
    "export interface ButtonProps {
  attributes?: any;
  text?: string;
  link?: string;
  openLinkInNewTab?: boolean;
}",
  ],
}
`;

exports[`Parse JSX > onUpdate return 1`] = `
{
  "@type": "@builder.io/mitosis/component",
  "children": [
    {
      "@type": "@builder.io/mitosis/node",
      "bindings": {},
      "children": [
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "Hello! ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "_text": {
              "code": "state.name",
            },
          },
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {},
          "scope": {},
        },
      ],
      "meta": {},
      "name": "div",
      "properties": {},
      "scope": {},
    },
  ],
  "context": {
    "get": {},
    "set": {},
  },
  "exports": {},
  "hooks": {
    "onUpdate": [
      {
        "code": "
  const controller = new AbortController();
  const signal = controller.signal;
  fetch('https://patrickjs.com/api/resource.json', {
    signal
  }).then(response => response.json()).then(data => {
    state.name = data.name;
  });
  return () => {
    if (!signal.aborted) {
      controller.abort();
    }
  };
",
        "deps": "[state.name]",
      },
    ],
  },
  "imports": [],
  "inputs": [],
  "meta": {},
  "name": "MyBasicOnUpdateReturnComponent",
  "refs": {},
  "state": {
    "name": {
      "code": "PatrickJS",
      "type": "property",
    },
  },
  "subComponents": [],
}
`;

exports[`Parse JSX > parseStateObject 1`] = `
{
  "allRegisteredComponents": {
    "code": "@builder.io/mitosis/method:get allRegisteredComponents() {
  const allComponentsArray = [...getDefaultRegisteredComponents(), // While this \`components\` object is deprecated, we must maintain support for it.
  // Since users are able to override our default components, we need to make sure that we do not break such
  // existing usage.
  // This is why we spread \`components\` after the default Builder.io components, but before the \`props.customComponents\`,
  // which is the new standard way of providing custom components, and must therefore take precedence.
  ...components, ...(props.customComponents || [])];
  const allComponents = allComponentsArray.reduce((acc, curr) => ({ ...acc,
    [curr.name]: curr
  }), ({} as RegisteredComponents));
  return allComponents;
}",
    "type": "getter",
  },
  "canTrackToUse": {
    "code": "@builder.io/mitosis/method:get canTrackToUse() {
  return props.canTrack || true;
}",
    "type": "getter",
  },
  "contentState": {
    "code": "@builder.io/mitosis/method:get contentState() {
  return { ...props.content?.data?.state,
    ...props.data,
    ...state.overrideState
  };
}",
    "type": "getter",
  },
  "contextContext": {
    "code": "@builder.io/mitosis/method:get contextContext() {
  return props.context || {};
}",
    "type": "getter",
  },
  "emitStateUpdate": {
    "code": "@builder.io/mitosis/method:emitStateUpdate() {
  if (isEditing()) {
    window.dispatchEvent(new CustomEvent<BuilderComponentStateChange>('builder:component:stateChange', {
      detail: {
        state: state.contentState,
        ref: {
          name: props.model
        }
      }
    }));
  }
}",
    "type": "method",
  },
  "evalExpression": {
    "code": "@builder.io/mitosis/method:evalExpression(expression: string) {
  return expression.replace(/{{([^}]+)}}/g, (_match, group) => evaluate({
    code: group,
    context: state.contextContext,
    state: state.contentState
  }));
}",
    "type": "method",
  },
  "evaluateJsCode": {
    "code": "@builder.io/mitosis/method:evaluateJsCode() {
  // run any dynamic JS code attached to content
  const jsCode = state.useContent?.data?.jsCode;

  if (jsCode) {
    evaluate({
      code: jsCode,
      context: state.contextContext,
      state: state.contentState
    });
  }
}",
    "type": "method",
  },
  "forceReRenderCount": {
    "code": 0,
    "type": "property",
  },
  "handleRequest": {
    "code": "@builder.io/mitosis/method:handleRequest({
  url,
  key
}: {
  key: string;
  url: string;
}) {
  const fetchAndSetState = async () => {
    const fetch = await getFetch();
    const response = await fetch(url);
    const json = await response.json();
    const newOverrideState = { ...state.overrideState,
      [key]: json
    };
    state.overrideState = newOverrideState;
  };

  fetchAndSetState();
}",
    "type": "method",
  },
  "httpReqsData": {
    "code": "@builder.io/mitosis/method:get httpReqsData() {
  return {};
}",
    "type": "getter",
  },
  "onClick": {
    "code": "@builder.io/mitosis/method:onClick(_event: MouseEvent) {
  if (state.useContent) {
    track({
      type: 'click',
      canTrack: state.canTrackToUse,
      contentId: state.useContent.id,
      orgId: props.apiKey
    });
  }
}",
    "type": "method",
  },
  "overrideContent": {
    "code": null,
    "type": "property",
  },
  "overrideState": {
    "code": {},
    "type": "property",
  },
  "processMessage": {
    "code": "@builder.io/mitosis/method:processMessage(event: MessageEvent) {
  const {
    data
  } = event;

  if (data) {
    switch (data.type) {
      case 'builder.contentUpdate':
        {
          const messageContent = data.data;
          const key = messageContent.key || messageContent.alias || messageContent.entry || messageContent.modelName;
          const contentData = messageContent.data;

          if (key === props.model) {
            state.overrideContent = contentData;
          }

          break;
        }

      case 'builder.patchUpdates':
        {
          // TODO
          break;
        }
    }
  }
}",
    "type": "method",
  },
  "runHttpRequests": {
    "code": "@builder.io/mitosis/method:runHttpRequests() {
  const requests = state.useContent?.data?.httpRequests ?? {};
  Object.entries(requests).forEach(([key, url]) => {
    if (url && (!state.httpReqsData[key] || isEditing())) {
      const evaluatedUrl = state.evalExpression(url);
      state.handleRequest({
        url: evaluatedUrl,
        key
      });
    }
  });
}",
    "type": "method",
  },
  "shouldRenderContentStyles": {
    "code": "@builder.io/mitosis/method:get shouldRenderContentStyles() {
  return Boolean((state.useContent?.data?.cssCode || state.useContent?.data?.customFonts?.length) && TARGET !== 'reactNative');
}",
    "type": "getter",
  },
  "update": {
    "code": 0,
    "type": "property",
  },
  "useContent": {
    "code": "@builder.io/mitosis/method:get useContent() {
  const mergedContent: BuilderContent = { ...props.content,
    ...state.overrideContent,
    data: { ...props.content?.data,
      ...props.data,
      ...state.overrideContent?.data
    }
  };
  return mergedContent;
}",
    "type": "getter",
  },
}
`;

exports[`Parse JSX > useRef 1`] = `
{
  "@type": "@builder.io/mitosis/component",
  "children": [
    {
      "@type": "@builder.io/mitosis/node",
      "bindings": {},
      "children": [
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
      ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "when": {
              "code": "props.showInput",
            },
          },
          "children": [
            {
              "@type": "@builder.io/mitosis/node",
              "bindings": {},
              "children": [
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
          ",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {
                    "css": {
                      "code": "{
  color: 'red'
}",
                    },
                    "onBlur": {
                      "arguments": [
                        "event",
                      ],
                      "code": "state.onBlur()",
                    },
                    "onChange": {
                      "arguments": [
                        "event",
                      ],
                      "code": "state.name = event.target.value",
                    },
                    "ref": {
                      "code": "inputRef",
                    },
                    "value": {
                      "code": "state.name",
                    },
                  },
                  "children": [],
                  "meta": {},
                  "name": "input",
                  "properties": {},
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "

          ",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {
                    "ref": {
                      "code": "inputNoArgRef",
                    },
                  },
                  "children": [
                    {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": {},
                      "children": [],
                      "meta": {},
                      "name": "div",
                      "properties": {
                        "_text": "
            Choose a car:
          ",
                      },
                      "scope": {},
                    },
                  ],
                  "meta": {},
                  "name": "label",
                  "properties": {
                    "for": "cars",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "

          ",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [
                    {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": {},
                      "children": [],
                      "meta": {},
                      "name": "div",
                      "properties": {
                        "_text": "
            ",
                      },
                      "scope": {},
                    },
                    {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": {},
                      "children": [
                        {
                          "@type": "@builder.io/mitosis/node",
                          "bindings": {},
                          "children": [],
                          "meta": {},
                          "name": "div",
                          "properties": {
                            "_text": "GR Supra",
                          },
                          "scope": {},
                        },
                      ],
                      "meta": {},
                      "name": "option",
                      "properties": {
                        "value": "supra",
                      },
                      "scope": {},
                    },
                    {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": {},
                      "children": [],
                      "meta": {},
                      "name": "div",
                      "properties": {
                        "_text": "
            ",
                      },
                      "scope": {},
                    },
                    {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": {},
                      "children": [
                        {
                          "@type": "@builder.io/mitosis/node",
                          "bindings": {},
                          "children": [],
                          "meta": {},
                          "name": "div",
                          "properties": {
                            "_text": "GR 86",
                          },
                          "scope": {},
                        },
                      ],
                      "meta": {},
                      "name": "option",
                      "properties": {
                        "value": "86",
                      },
                      "scope": {},
                    },
                    {
                      "@type": "@builder.io/mitosis/node",
                      "bindings": {},
                      "children": [],
                      "meta": {},
                      "name": "div",
                      "properties": {
                        "_text": "
          ",
                      },
                      "scope": {},
                    },
                  ],
                  "meta": {},
                  "name": "select",
                  "properties": {
                    "id": "cars",
                    "name": "cars",
                  },
                  "scope": {},
                },
                {
                  "@type": "@builder.io/mitosis/node",
                  "bindings": {},
                  "children": [],
                  "meta": {},
                  "name": "div",
                  "properties": {
                    "_text": "
        ",
                  },
                  "scope": {},
                },
              ],
              "meta": {},
              "name": "Fragment",
              "properties": {},
              "scope": {},
            },
          ],
          "meta": {},
          "name": "Show",
          "properties": {},
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "
      Hello
      ",
          },
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {
            "_text": {
              "code": "state.lowerCaseName()",
            },
          },
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {},
          "scope": {},
        },
        {
          "@type": "@builder.io/mitosis/node",
          "bindings": {},
          "children": [],
          "meta": {},
          "name": "div",
          "properties": {
            "_text": "! I can run in React, Qwik, Vue, Solid, or Web Component!
    ",
          },
          "scope": {},
        },
      ],
      "meta": {},
      "name": "div",
      "properties": {},
      "scope": {},
    },
  ],
  "context": {
    "get": {},
    "set": {},
  },
  "exports": {},
  "hooks": {},
  "imports": [],
  "inputs": [],
  "meta": {},
  "name": "MyBasicRefComponent",
  "propsTypeRef": "Props",
  "refs": {
    "inputNoArgRef": {
      "argument": "null",
      "typeParameter": "HTMLLabelElement",
    },
    "inputRef": {
      "argument": "null",
      "typeParameter": "HTMLInputElement",
    },
  },
  "state": {
    "lowerCaseName": {
      "code": "@builder.io/mitosis/function:function lowerCaseName() {
  return state.name.toLowerCase();
}",
      "type": "function",
    },
    "name": {
      "code": "PatrickJS",
      "type": "property",
    },
    "onBlur": {
      "code": "@builder.io/mitosis/function:function onBlur() {
  // Maintain focus
  inputRef.focus();
}",
      "type": "function",
    },
  },
  "subComponents": [],
  "types": [
    "export interface Props {
  showInput: boolean;
}",
  ],
}
`;
